Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/content.html
+++ b/content.html
@@ -30,6 +30,8 @@
             color: var(--dark);
             display: flex;
             min-height: 100vh;
+            overflow-x: hidden;
+            position: relative;
         }
         
         /* Sidebar */
@@ -1482,7 +1484,7 @@
         <div class="page-section" id="users">
             <h2>Current Session Users</h2>
             <div class="table-container">
-                <table id="currentUsersTable" class="activeUserTable">
+                <table id="currentUsersTable">
                     <thead>
                         <tr>
                             <th>User</th>
@@ -2612,3 +2614,4 @@
 </body>
 
 </html>
+
