Update output message from 'Hello' to 'Goodbye'

--- a/content.html
+++ b/content.html
@@ -1319,7 +1319,6 @@
             <li><a href="#" data-page="quiz"><i class="fas fa-question-circle"></i> Quiz & Test Prep</a></li>
             <li><a href="#" data-page="lingo-lab"><i class="fas fa-language"></i> Lingo-lab</a></li>
             <li><a href="#" data-page="users"><i class="fas fa-users-cog"></i> Active Users</a></li>
-            <li><a href="#" data-page="dashboard"><i class="fas fa-database"></i> Database</a></li>
             <li><a href="index.html" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
         </ul>
     </div>
@@ -1451,12 +1450,12 @@
         <div class="page-section" id="dashboard">
             
             <div class="feature-card">
-                <div class="feature-icon">
+                <!-- <div class="feature-icon">
                     <i class="fas fa-database"></i>
                 </div>
                 <h3>Users Database</h3>
                 <p>View all registered users in the system.</p>
-                <a href="database.html" class="btn">View All Users</a>
+                <a href="database.html" class="btn">View All Users</a> -->
             </div>
 
             <div class="features-grid">
@@ -2917,4 +2916,5 @@
     
     </script>
 </body>
+
 </html>
